package Problem_II;

public interface GenericDevice {
    void update(Notification notification);
}
